dashboard/ethstats-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
  namespace: default
  labels:
    app: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
