dashboard/ethstats-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eth-ethstats
  namespace: default
  labels:
    app: eth-ethstats
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: imti-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: ethstats.dcp.dev.d4l.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: eth-ethstats
            port: 
              number: 80
  tls:
  - hosts:
    - ethstats.eth.imti.co
    secretName: imti-dev-production-tls
